--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
 			$("#calc-input").val().slice(0, -1)
 		);
 	}
+	document.getElementById('calc-input').addEventListener("keydown", function(event) {
+		if (event.keyCode === 13) {
+			event.preventDefault();
+			solve();
+		}
+	});
 </script>
 </body>
 </html>
