--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 			margin: 1px;
 			text-align: right;
 			color: white;
+			line-height: 100%;
 			font-size: 36px;
 			font-family: monospace;
 			padding-right: 16px;
