--- a/index.html
+++ b/index.html
@@ -178,7 +178,13 @@
 			<div class="calc-buttons-row">
 				<button type="button" class="but btn-black" onclick="but('(')">(</button>
 				<button type="button" class="but btn-black" onclick="but(')')">)</button>
-				<button type="button" class="but btn-black" onclick="clear_in();">C</button>
+				<button type="button" class="but btn-black" onclick="clear_in()">C</button>
+				<button type="button" class="but btn-black" onclick="back()">←</button>
+			</div>
+			<div class="calc-buttons-row">
+				<button type="button" class="but btn-black" onclick="but('')"></button>
+				<button type="button" class="but btn-black" onclick="but('sqrt(')">√</button>
+				<button type="button" class="but btn-black" onclick="but('^')">^</button>
 				<button type="button" class="but btn-black" onclick="but('/')">/</button>
 			</div>
 			<div class="calc-buttons-row">
@@ -200,7 +206,7 @@
 				<button type="button" class="but btn-black" onclick="but('+')">+</button>
 			</div>
 			<div class="calc-buttons-row">
-				<button type="button" class="but btn-black" onclick="back()">←</button>
+				<button type="button" class="but btn-black" onclick=""></button>
 				<button type="button" class="but btn-black" onclick="but('0')">0</button>
 				<button type="button" class="but btn-black" onclick="but('.')">.</button>
 				<button type="button" class="but btn-primary" style="font-size: 36px;" onclick="solve()">=</button>
