--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<button type="button" class="but btn-black" onclick="back()">←</button>
 			</div>
 			<div class="calc-buttons-row">
-				<button type="button" class="but btn-black" onclick="but('')"></button>
+				<button type="button" class="but btn-black" onclick="but('pi')">π</button>
 				<button type="button" class="but btn-black" onclick="but('sqrt(')">√</button>
 				<button type="button" class="but btn-black" onclick="but('^')">^</button>
 				<button type="button" class="but btn-black" onclick="but('/')">/</button>
