--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@ function but(button) {
 }
 function focusInput() {
 	cin.focus();
+	cin.setSelectionRange(cinPos, cinPos);
 }
 function solve() {
 	$("#calc-input").val(
