Changed a few symbols

--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
 				<button type="button" class="but btn-black" onclick="but('(')">(</button>
 				<button type="button" class="but btn-black" onclick="but(')')">)</button>
 				<button type="button" class="but btn-black" onclick="clear_in()">C</button>
-				<button type="button" class="but btn-black" onclick="but('back')">←</button>
+				<button type="button" class="but btn-black" onclick="but('back')">&#129152;</button><!-- ← -->
 			</div>
 			<div class="calc-buttons-row">
 				<button type="button" class="but btn-black" onclick="but('pi')">π</button>
 				<button type="button" class="but btn-black" onclick="but('sqrt(')">√</button>
 				<button type="button" class="but btn-black" onclick="but('^')">^</button>
-				<button type="button" class="but btn-black" onclick="but('/')">/</button>
+				<button type="button" class="but btn-black" onclick="but('/')">÷</button>
 			</div>
 			<div class="calc-buttons-row">
 				<button type="button" class="but btn-black" onclick="but('7')">7</button>
 				<button type="button" class="but btn-black" onclick="but('8')">8</button>
 				<button type="button" class="but btn-black" onclick="but('9')">9</button>
-				<button type="button" class="but btn-black" onclick="but('*')">*</button>
+				<button type="button" class="but btn-black" onclick="but('*')">×</button>
 			</div>
 			<div class="calc-buttons-row">
 				<button type="button" class="but btn-black" onclick="but('4')">4</button>
