--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Calculator</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="canonical" href="https://calculator.justus-d.de">
 	<meta name="description" content="An HTML5 Calculator to use as a PWA">
 	<meta name="author" content="Justus Dietrich">
 	<meta name="keywords" content="Justus Dietrich, Calculator, Taschenrechner, Progressive Web App, PWA">
